fixing contrast on tag tallies

--- a/hugo/assets/sass/components/_tags.scss
+++ b/hugo/assets/sass/components/_tags.scss
@@ -22,6 +22,7 @@
 // Tags in the sidebar
 .tags_nav .post_tag .button_tally {
   margin-left: 0.5rem;
-  padding: 0.2rem 0.75rem;
+  padding: 0.2rem 0.5rem;
   border-radius: 100%;
+  background-color: darken(map-get($color, bright-green), 12%);
 }
